Fix HTML structure and update certificate details

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
             <tr><th>Código Distrito</th><td>15-02</td></tr>
             <tr><th>Nombre Distrito</th><td>DISTRITO NACIONAL</td></tr>
             <tr><th>Estado</th><td>APROBÓ EL PLAN DE ESTUDIO Y LAS PRUEBAS NACIONALES EN CONCLUSIÓN</td></tr>
-            <tr><th>Modalidad</th><td>EDUCACIÓN MEDIA, PARA ADULTOS</td></tr>
+            <tr><th>Modalidad</th><td>EDUCACIÓN MEDIA, PREPARA PARA ADULTOS</td></tr>
             <tr><th>Año Escolar</th><td>2017-2018</td></tr>
             <tr><th>Convocatoria</th><td>1</td></tr>
             <tr><th>Sección</th><td>SP-E</td></tr>
@@ -307,3 +307,4 @@
     </script>
 </body>
 </html>
+
